--- a/visit.html
+++ b/visit.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="Museum" />
+    <meta name="description" content="Visiting hours of the Community Science Museum" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Visit Us</title>
     <link rel="stylesheet" href="/css/visit.css" />
@@ -32,7 +32,44 @@
         </ul>
       </nav>
     </header>
-    <main>asd</main>
+    <main>
+      <h2>Location</h2>
+      <section class="texttext">
+        The museum is located at Byfjellene 20, 5014 Bergen
+      </section>
+      <h2>Admission</h2>
+      <section class="texttext">
+        The entrance is free for all. <br /><br />
+        There are guided tours of the museum that leave every hour. These tours
+        are 70 NOK per person and include a handy printed guide of the museum.
+        <br /><br />
+        If you would like to organise a guided tour for your group of 6 or more
+        people, please contact us to arrange the tour.
+      </section>
+      <h2>Opening Hours</h2>
+      <section class="texttext">
+        Monday: Closed <br /><br />Tuesday: 10:00 - 16:00 <br /><br />Wednesday:
+        10:00 - 16:00 <br /><br />Thursday: 10:00 - 16:00 <br /><br />Friday:
+        10:00 - 19:00 <br /><br />Saturday: 09:00 - 16:00 <br /><br />Sunday:
+        09:00 - 13:00
+      </section>
+      <h2>Accessibility</h2>
+      <section class="texttext">
+        The museum has wheelchair accessibility ramps. It also has audio guides
+        and braille display signs for the visually impaired.
+      </section>
+      <h2>Food & Drink</h2>
+      <section class="texttext">
+        There is a café attached to the museum where you can get light lunches,
+        soft drinks, coffee, snacks and more.
+      </section>
+      <h2>Souvenir Shop</h2>
+      <section class="texttext">
+        Our shop offers a range of memorabilia from the museum as well as great
+        gifts and activity packs that allow you to continure to explore science
+        even after you've left the museum.
+      </section>
+    </main>
     <footer>
       <ul>
         <li>
