--- a/exhibits.html
+++ b/exhibits.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="Museum" />
+    <meta name="description" content="The exhibits at the Community Science Museum" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Our Exhibits</title>
     <link rel="stylesheet" href="/css/exhibits.css" />
@@ -21,7 +21,9 @@
   <body class="container">
     <header>
       <input type="checkbox" name="" id="menu-checkbox" />
-      <label for="menu-checkbox"><i class="fas fa-bars"></i></label>
+      <label for="menu-checkbox" class="hamburger-icon"
+        ><i class="fas fa-bars"></i
+      ></label>
       <a href="index.html" class="home-logo">Community Science Museum</a>
       <nav>
         <ul>
@@ -33,18 +35,58 @@
       </nav>
     </header>
     <main>
-      <h1>Exhibition Spaces</h1>
-      <section>
-        <h2>Cosmology</h2>
-        <h3>
-          Explore the wonders of our cosmos. Our fantastic exhibition, 'The Sky
-          Above Us', explores the night sky and what we can see and know about
-          the universe around us. We'll locate the various constellations and
-          galaxies that can be seen and learn a bit about the early navigators
-          who used the stars to travel by. Follow the journey of our solar
-          exploration: to Galileo's telescope, to the latest exploration of the
-          planets in our solar system.
-        </h3>
+      <h2>Cosmology</h2>
+      <section class="texttext">
+        Explore the wonders of our cosmos. Our fantastic exhibition, 'The Sky
+        Above Us', explores the night sky and what we can see and know about the
+        universe around us. We'll locate the various constellations and galaxies
+        that can be seen and learn a bit about the early navigators who used the
+        stars to travel by. Follow the journey of our solar exploration: to
+        Galileo's telescope, to the latest exploration of the planets in our
+        solar system.
+      </section>
+      <h2>Evolution</h2>
+      <section class="texttext">
+        For centuries, philosophers and scientists have wrstled witht he
+        question of our origins. Where do we come from and how did we get here?
+        Since Darwin proposed his theory of evolution we have had a framework
+        for exploring and understanding our place in this world <br /><br />
+        Discover the origins of life on this planet and how the species we know
+        today have evolved our time. You can also take some time to meet a few
+        of the creatures who didn't surivive, including our Woolly Mammoth, the
+        Dodos and a number of dinosaurs too.
+      </section>
+      <h2>Biology and Medicine</h2>
+      <section class="texttext">
+        From micro-organisms to the human body, major breakthroughs in biology
+        are offering us unique insights into the great wonders of the tiny
+        world. <br /><br />
+        For many people their life expectancy is much longer and their quality
+        of life much improved, thanks to the growth of our understanding of
+        medicine. Over a series of exhibits we explore the history of medicine
+        and take a look at some major breakthroughs including the discovery of
+        penicillin and the first heart transplant. <br /><br />
+        Many of our great medicinal discoveries have come not only from the lab,
+        but also from observing animals in teh wild. Often our fellow creatures
+        have beat us to it.
+      </section>
+      <h2>Robotics and AI</h2>
+      <section class="texttext">
+        The information revolution is here and robotics and artificial
+        intelligence are the science of the future. From useful home
+        applications of AI to industrial uses of robotics, the future is here.
+        You can even say hell and shake the the hand of Rob the Robot.
+      </section>
+      <h2>Ecology</h2>
+      <section class="texttext">
+        As we learn more and more of the impact humans are having on the planet,
+        the more improtant it becomes that scientists explore how to create a
+        sustainable future not just for humans but for the whole planet.
+        <br /><br />
+        In our ecology section of the museum, we unpack the dangers we currently
+        face including global warming, extinction of species, and pollution. But
+        we also focus on the positive ways we can all contribute to a brighter
+        future.
       </section>
     </main>
     <footer>
